--- a/style.css
+++ b/style.css
@@ -18,17 +18,25 @@
 
 .title {
     width: 100%;
-    height: 20%;
+    height: 20vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
 }
 
+.textfield-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .title h1 {
     color: #ffffff;
     text-transform: uppercase;
     letter-spacing: 5px;
+    text-align: center;
 }
 
 .title h1 span {
@@ -36,27 +44,43 @@
 }
 
 .title h2 {
-    color: #03a9f4;
+    color: #caf729;
     font-size: 20px;
     margin-bottom: 1%;
     letter-spacing: 5px;
     font-family: 'Kalam', cursive;
+    text-align: center;
 }
 
 .container {
     width: 100%;
-    height: 80%;
+    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.container-left {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+    height: 450px;
+    
+}
+.container-right {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+    height: 450px;
+}
+
 .card {
     width: 300px;
     height: 450px;
-    /* padding: 2%; */
-    /* background-color: rgba(0, 0, 0, 0.279); */
-    /* border: 1px solid #03a9f4; */
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -66,42 +90,36 @@
 
 .card:hover {
     background-color: #03a9f4;
+    transform: scale(1.1);
 }
 
 .img-card {
     height: 80%;
-    /* height: 100%; */
     width: 100%;
     background-size: contain;
-    /* background-size: cover; */
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .musculacao {
-    background-image: url(imgprogramas/img2.png);
-    /* background-image: url(imgprogramas/fundo2.png); */
+    background-image: url(https://github.com/EduFag/tcc-programas/blob/main/imgprogramas/img2.png?raw=true);
 }
 
 .yoga {
-    background-image: url(imgprogramas/img3.png);
-    /* background-image: url(imgprogramas/fundo3.png); */
+    background-image: url(https://github.com/EduFag/tcc-programas/blob/main/imgprogramas/img3.png?raw=true);
 }
 
 .cardio {
-    background-image: url(imgprogramas/img4.png);
-    /* background-image: url(imgprogramas/fundo4.png); */
+    background-image: url(img/Sem_título-removebg-preview.png);
 }
 
 .peso {
-    background-image: url(imgprogramas/img5.png);
-    /* background-image: url(imgprogramas/fundo5.png); */
+    background-image: url(https://github.com/EduFag/tcc-programas/blob/main/imgprogramas/img5.png?raw=true);
 }
 
 .textfield {
     width: 100%;
     height: 20%;
-    /* border: 1px solid #03a9f4; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,4 +128,48 @@
 .textfield h2 {
     text-transform: uppercase;
     color: #ffffff;
+}
+
+@media (max-width: 768px) {
+    .main-programas {
+        height: 175vh;
+    }
+
+    .title {
+        height: 25vh;
+    }
+
+    .container {
+        flex-direction: column;
+        height: 150vh;
+    }
+
+}
+
+
+@media (max-width: 574px) {
+    .main-programas {
+        height: 310vh;
+    }
+
+    .title {
+        height: 25vh;
+    }
+
+    .container {
+        flex-direction: column;
+        height: 285vh;
+    }
+
+    .container-left {
+        flex-direction: column;
+        height: 900px;
+        width: 300px;
+    }
+    .container-right {
+        flex-direction: column;
+        height: 900px;
+        width: 300px;
+    }
+
 }
